# platformer-game

./: CMakeLists.txt  README.md
docs/: architecture.adoc  requirements.adoc  tests.adoc  timeline.adoc
docs/.asciidoctor/diagram/: diag-graphviz-md5-3508b1330db3699b1f327ab3e98efa11.png.cache  diag-graphviz-md5-7023decf48bb3dbb3f655a53a4a19b61.png.cache  sample.png.cache
docs/graphs/: classes.dot  test.dot
src/main/: Components.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  GameScene.cpp  GameScene.h  MainMenuScene.cpp  MainMenuScene.h  SceneInterface.h  SceneManager.cpp  SceneManager.h  Vec2.cpp  Vec2.h  main.cpp
src/test/: CMakeLists.txt  EntityManagerTest.cpp  Vec2Test.cpp
